# jira-pro

./: AGENTS.md  CHANGELOG.md  PLAN.md  PRIVACY.md  README.md  conventions.md  pyproject.toml
.beans/: journal.jsonl
.github/: pull_request_template.md
docs/: architecture.md  beans.md  conventions.md  testing.md  tooling.md  workflow.md
scripts/: release.sh  worktree-create.sh  worktree-remove.sh
skills/intake/: SKILL.md
skills/jira/: SKILL.md
skills/orchestrate/: SKILL.md
src/jira/: adf.py  auth.py  cli.py  client.py  config.py  formatters.py  schema.py  templates.py
src/jira_genie/: __main__.py  adf.py  auth.py  cache.py  cli.py  client.py  completers.py  formatters.py  schema.py  skill.py  templates.py
src/jira_genie/skills/jira-genie/: SKILL.md
tests/: conftest.py  test_adf.py  test_auth.py  test_cache.py  test_cli.py  test_client.py  test_completers.py  test_config.py  test_formatters.py  test_schema.py  test_templates.py
