[project]
name = "jira-genie"
version = "0.2.1"
description = "Your AI agent's interface to Jira Cloud. JSON in, JSON out."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Henrique Bastos", email = "henrique@bastos.net" }
]
requires-python = ">=3.13"
dependencies = [
    "argcomplete>=3.6.3",
    "requests-pro",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jira"]

[project.scripts]
jira = "jira.cli:cli"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "responses>=0.26.0",
    "ruff>=0.15.6",
    "time-machine>=3.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=jira --cov-report=term-missing --no-header -q"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "RUF"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["jira"]
