[project]
name = "jira-genie"
version = "0.3.0"
description = "Your AI agent's interface to Jira Cloud. JSON in, JSON out."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Henrique Bastos", email = "henrique@bastos.net" }
]
requires-python = ">=3.11"
dependencies = [
    "argcomplete>=3.6.3",
    "mistune>=3.1",
    "requests-pro",
]

[tool.setuptools.package-data]
jira_genie = ["skills/jira-genie/SKILL.md"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
jira = "jira_genie.cli:cli"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "responses>=0.26.0",
    "ruff>=0.15.6",
    "time-machine>=3.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=jira_genie --cov-report=term-missing --no-header -q"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "RUF"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["jira_genie"]
